--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg navbar-inverse bg-base-2">
         <div class="container navbar-container">
             <!-- Brand/Logo -->
-            <%= link_to 'Home', root_path, class: 'navbar-brand', :id => 'titre' %>
+            <%= link_to (image_tag 'icons/logo-nav.png'), root_path, class: 'navbar-brand', :id => 'titre' %>
 
             <div class="d-inline-block">
                 <!-- Navbar toggler  -->
@@ -29,11 +29,14 @@
               <!-- Navbar links -->
               <ul class="navbar-nav">
                   <li class="nav-item dropdown megamenu">
-                    <%= link_to (image_tag 'icons/home_blanc.png'), root_path, class: 'nav-link' %>
+                    <%= link_to (image_tag 'icons/home-blanc.png'), root_path, class: 'nav-link' %>
                   </li>
                   <% if user_signed_in? %>
                     <li class="nav-item dropdown megamenu">          
-                      <%= link_to (image_tag 'icons/profil_blanc.png'), user_path(current_user.id), class: 'nav-link' %>
+                      <%= link_to (image_tag 'icons/profil-blanc.png'), user_path(current_user.id), class: 'nav-link' %>
+                    </li>
+                    <li class="nav-item dropdown megamenu">          
+                      <%= link_to (image_tag 'icons/enveloppe-blanc.png'), user_path(current_user.id), class: 'nav-link' %>
                     </li>
                     <li class="nav-item dropdown megamenu">
                       <%= link_to "Se Déconnecter", destroy_user_session_path, method: :delete, class: 'nav-link'%>
