--- a/app/views/static_pages/_home.html.erb
+++ b/app/views/static_pages/_home.html.erb
@@ -4,15 +4,15 @@
     
     <div class=" container centered-2">
         <div class= "row">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
-        <h1 class="heading display-4 strong-400 c-white">
-          Rencontrer du monde, échanger, s'améliorer.
-        </h1>
+            <p class="notice"><%= notice %></p>
+            <p class="alert"><%= alert %></p>
+            <h1 class="heading display-4 strong-400 c-white">
+              Rencontrer, échanger, s'améliorer.
+            </h1>
 
-        <div class="lead mt-3 mb-3 c-white">
-            Speak&UP est la première plateforme de rencontre uniquement basée sur l'apprentissage des langues.
-        </div>
+            <div class="lead mt-3 mb-3 c-white">
+                Speak&UP est la première plateforme de rencontre uniquement basée sur l'apprentissage des langues.
+            </div>
         </div>
     </div>
 </div>
@@ -26,14 +26,14 @@
             <div class="row-wrapper">
                 <div class="row cols-md-space cols-sm-space cols-xs-space">
                     <div class="col-lg-4">
-                        <div class="block block--style-3">
+                        <div class="block block--style-3 block-shadow">
                             <div class="profile-picture profile-picture--style-2">
                                 <img src="../../assets/images/prv/people/person-1.jpg" >
                             </div>
 
                             <div class="block-body text-center">
-                                <h3 class="heading heading-6 strong-600 mb-0 mb-0">Jack Fitcher</h3>
-                                <h3 class="heading heading-light heading-sm strong-300">Rennes</h3>
+                                <h3 class="heading heading-6 strong-600 mb-0 mb-0 c-orange">Jack Fitcher</h3>
+                                <h3 class="heading heading-light heading-sm strong-300 c-black">Rennes</h3>
                                                             <div class="aux-info-wrapper border-top">
                                 <ul class="aux-info">
                                     <li class="heading strong-400 text-center">
@@ -44,63 +44,55 @@
                                 </ul>
                             </div>
 
-                                <a href="#" class="btn btn-styled btn-base-1 btn-outline btn-circle px-4 mt-2">Ajouter</a>
+                                <a href="#" class="btn btn-base-1 btn-shadow btn-circle px-4 mt-2">Ajouter</a>
                             </div>
                         </div>
                     </div>
 
                         <div class="col-lg-4">
-                            <div class="block block--style-3">
-                                <div class="profile-picture profile-picture--style-2">
-                                    <img src="../../assets/images/prv/people/person-2.jpg" >
-                                </div>
-
-                                <div class="block-body text-center">
-                                    <h3 class="heading heading-6 strong-600 mb-0">David Wally</h3>
-                                    <h3 class="heading heading-light heading-sm strong-300">Manager at Microsoft</h3>
-
-                                    <a href="#" class="btn btn-base-1 btn-shadow btn-circle px-4 mt-2">Follow</a>
-                                </div>
-
-                                <div class="aux-info-wrapper border-top">
-                                    <ul class="aux-info">
-                                        <li class="heading strong-400 text-center">
-                                            <span class="d-block strong-600">10k</span>
-                                            Followers
-                                        </li>
-                                        <li class="heading strong-400 text-center">
-                                            <span class="d-block strong-600">5k</span>
-                                            Following
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                         </div>
-
-                    <div class="col-lg-4">
-                        <div class="block block--style-3">
+                        <div class="block block--style-3 block-shadow">
                             <div class="profile-picture profile-picture--style-2">
-                                <img src="../../assets/images/prv/people/person-3.jpg" >
+                                <img src="../../assets/images/prv/people/person-1.jpg" >
                             </div>
 
                             <div class="block-body text-center">
-                                <h3 class="heading heading-6 strong-600 mb-0">Cliff Simon</h3>
-                                <h3 class="heading heading-light heading-sm strong-300">CEO of Webpixels</h3>
-
-                                <a href="#" class="btn btn-base-1 btn-shadow btn-circle px-4 mt-2">Follow</a>
-                            </div>
-
-                            <div class="aux-info-wrapper border-top">
+                                <h3 class="heading heading-6 strong-600 mb-0 mb-0 c-orange">Jack Fitcher</h3>
+                                <h3 class="heading heading-light heading-sm strong-300 c-black">Rennes</h3>
+                                                            <div class="aux-info-wrapper border-top">
                                 <ul class="aux-info">
                                     <li class="heading strong-400 text-center">
-                                        <span class="d-block strong-600">10k</span>
-                                        Followers
-                                    </li>
-                                    <li class="heading strong-400 text-center">
-                                        <span class="d-block strong-600">5k</span>
-                                        Following
+                                        <span class="d-block strong-600">Parle : Anglais</span>
+                                    
+                                        <span class="d-block strong-600">Apprends à parler : Français</span>
                                     </li>
                                 </ul>
+                            </div>
+
+                                <a href="#" class="btn btn-base-1 btn-shadow btn-circle px-4 mt-2">Ajouter</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <div class="block block--style-3 block-shadow">
+                            <div class="profile-picture profile-picture--style-2">
+                                <img src="../../assets/images/prv/people/person-1.jpg" >
+                            </div>
+
+                            <div class="block-body text-center">
+                                <h3 class="heading heading-6 strong-600 mb-0 mb-0 c-orange">Jack Fitcher</h3>
+                                <h3 class="heading heading-light heading-sm strong-300 c-black">Rennes</h3>
+                                                            <div class="aux-info-wrapper border-top">
+                                <ul class="aux-info">
+                                    <li class="heading strong-400 text-center">
+                                        <span class="d-block strong-600">Parle : Anglais</span>
+                                    
+                                        <span class="d-block strong-600">Apprends à parler : Français</span>
+                                    </li>
+                                </ul>
+                            </div>
+
+                                <a href="#" class="btn btn-base-1 btn-shadow btn-circle px-4 mt-2">Ajouter</a>
                             </div>
                         </div>
                     </div>
@@ -108,60 +100,52 @@
 
                 <div class="row">
                         <div class="col-lg-4">
-                            <div class="block block--style-3">
-                                <div class="profile-picture profile-picture--style-2">
-                                    <img src="../../assets/images/prv/people/person-2.jpg" >
-                                </div>
+                        <div class="block block--style-3 block-shadow">
+                            <div class="profile-picture profile-picture--style-2">
+                                <img src="../../assets/images/prv/people/person-1.jpg" >
+                            </div>
 
-                                <div class="block-body text-center">
-                                    <h3 class="heading heading-6 strong-600 mb-0">David Wally</h3>
-                                    <h3 class="heading heading-light heading-sm strong-300">Manager at Microsoft</h3>
+                            <div class="block-body text-center">
+                                <h3 class="heading heading-6 strong-600 mb-0 mb-0 c-orange">Jack Fitcher</h3>
+                                <h3 class="heading heading-light heading-sm strong-300 c-black">Rennes</h3>
+                                                            <div class="aux-info-wrapper border-top">
+                                <ul class="aux-info">
+                                    <li class="heading strong-400 text-center">
+                                        <span class="d-block strong-600">Parle : Anglais</span>
+                                    
+                                        <span class="d-block strong-600">Apprends à parler : Français</span>
+                                    </li>
+                                </ul>
+                            </div>
 
-                                    <a href="#" class="btn btn-base-1 btn-shadow btn-circle px-4 mt-2">Follow</a>
-                                </div>
-
-                                <div class="aux-info-wrapper border-top">
-                                    <ul class="aux-info">
-                                        <li class="heading strong-400 text-center">
-                                            <span class="d-block strong-600">10k</span>
-                                            Followers
-                                        </li>
-                                        <li class="heading strong-400 text-center">
-                                            <span class="d-block strong-600">5k</span>
-                                            Following
-                                        </li>
-                                    </ul>
-                                </div>
+                                <a href="#" class="btn btn-base-1 btn-shadow btn-circle px-4 mt-2">Ajouter</a>
                             </div>
                         </div>
+                    </div>
 
                         <div class="col-lg-4">
-                            <div class="block block--style-3">
-                                <div class="profile-picture profile-picture--style-2">
-                                    <img src="../../assets/images/prv/people/person-2.jpg" >
-                                </div>
+                        <div class="block block--style-3 block-shadow">
+                            <div class="profile-picture profile-picture--style-2">
+                                <img src="../../assets/images/prv/people/person-1.jpg" >
+                            </div>
 
-                                <div class="block-body text-center">
-                                    <h3 class="heading heading-6 strong-600 mb-0">David Wally</h3>
-                                    <h3 class="heading heading-light heading-sm strong-300">Manager at Microsoft</h3>
+                            <div class="block-body text-center">
+                                <h3 class="heading heading-6 strong-600 mb-0 mb-0 c-orange">Jack Fitcher</h3>
+                                <h3 class="heading heading-light heading-sm strong-300 c-black">Rennes</h3>
+                                                            <div class="aux-info-wrapper border-top">
+                                <ul class="aux-info">
+                                    <li class="heading strong-400 text-center">
+                                        <span class="d-block strong-600">Parle : Anglais</span>
+                                    
+                                        <span class="d-block strong-600">Apprends à parler : Français</span>
+                                    </li>
+                                </ul>
+                            </div>
 
-                                    <a href="#" class="btn btn-base-1 btn-shadow btn-circle px-4 mt-2">Follow</a>
-                                </div>
-
-                                <div class="aux-info-wrapper border-top">
-                                    <ul class="aux-info">
-                                        <li class="heading strong-400 text-center">
-                                            <span class="d-block strong-600">10k</span>
-                                            Followers
-                                        </li>
-                                        <li class="heading strong-400 text-center">
-                                            <span class="d-block strong-600">5k</span>
-                                            Following
-                                        </li>
-                                    </ul>
-                                </div>
+                                <a href="#" class="btn btn-base-1 btn-shadow btn-circle px-4 mt-2">Ajouter</a>
                             </div>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
