--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,13 +20,13 @@
 					        <!-- Profile details -->
 					        <div class="profile-details">
 					            <h2 class="heading heading-4 strong-500 profile-name"><%= @user.first_name %> <%= @user.last_name %></h2>
-					            
+
 					            <h3 class="heading heading-light heading-6 strong-400 profile-location"><%= @user.city %>, <%= @user.country %></h3>
 					        </div>
 
 
 					        <!-- Profile connect -->
-					        <div class="profile-connect mt-4">	
+					        <div class="profile-connect mt-4">
 					            <p><%= render 'follow_form' %></p>
 					            <p><%= render 'send_message' %></p>
                             </div>
@@ -94,11 +94,11 @@
                                                 <div class="card-body px-0">
                                                     <div>
                                                         <ul class="checkbox">
-                                                            <% Language.find(@user.spoken_languages.ids).each do |language| %>
-                                                                <li><%= language.name %></li>
+                                                            <% @user.spoken_languages.each do |language| %>
+                                                                <li><%= Language.find(language.language_id).name %></li>
                                                             <% end %>
                                                         </ul>
-                                                    </div>           
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -106,22 +106,22 @@
                                             <div class="card no-border bg-transparent">
                                                 <div class="card-title px-0">
                                                     <h3 class="heading heading-6 strong-600">
-                                                    Langues en cours d'apprentissage : 
+                                                    Langues en cours d'apprentissage :
                                                     </h3>
                                                 </div>
-                                                <div class="card-body px-0">  
+                                                <div class="card-body px-0">
                                                     <div>
                                                         <ul class="checkbox">
-                                                            <% Language.find(@user.wanted_languages.ids).each do |language| %>
-                                                                <li><%= language.name %></li>
-                                                            <% end %> 
+                                                          <% @user.wanted_languages.each do |language| %>
+                                                              <li><%= Language.find(language.language_id).name %></li>
+                                                          <% end %>
                                                         </ul>
-                                                    </div>  
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>                                                  
+                                </div>
                             <!-- Interests section  -->
                                 <div class="card no-border bg-transparent">
                                     <div class="card-title px-0 pb-0 no-border">
@@ -131,8 +131,8 @@
                                     </div>
                                     <div class="card-body px-0">
                                         <div class="row">
-                                            <div class="col-md-6 col-lg-4"> 
-                                                <% @user.interests.each do |interest| %>           
+                                            <div class="col-md-6 col-lg-4">
+                                                <% @user.interests.each do |interest| %>
                                                     <span class="badge badge-lg badge-primary"><%= interest.name %></span>
                                                 <% end %>
                                             </div>
@@ -147,4 +147,3 @@
         </div>
     </div>
 </section>
-
