--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -132,7 +132,7 @@
 
 .block--style-3 {
     border-radius: 1.1em !important;
-    border: 3px solid #FF5A26 !important;
+    border: 7px solid #ececec !important;
 }
 
 .marge {
